--- a/cloudpaks.adoc
+++ b/cloudpaks.adoc
@@ -6,13 +6,13 @@ v1.0, 2019-09-12
 
 == Prerequisites
 
-* Openshift (We are using the IKS Openshift cluster)
-* Docker for Desktop
+* https://cloud.ibm.com/kubernetes/catalog/openshiftcluster[Openshift] (We are using the IKS Openshift cluster)
+* Docker for Desktop - https://docs.docker.com/docker-for-mac/install/[Mac], https://docs.docker.com/docker-for-windows/install/[Windows]
 * The following command line (CLI) tools and configured:
-  ** docker
-  ** oc
-  ** git
-  ** appsody
+  ** docker - It comes with the Dcoker for Destop installation.
+  ** https://www.okd.io/download.html[oc]
+  ** https://git-scm.com/book/en/v2/Getting-Started-Installing-Git[git]
+  ** https://appsody.dev/docs/getting-started/installation[appsody]
 
 == Add Kabanero Collection to appsody
 
